<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="welcome">welcome</string>
    <string name="transaction_text">Transaction Amount</string>
    <string name="app_name">WALLT</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="logo">Logo</string>
    <string name="id">ID</string>
    <string name="userName">User Name</string>
    <string name="email">Email</string>
    <string name="createAccount">Create account</string>
    <string name="fullName">Full Name</string>
    <string name="pwd">Password</string>
    <string name="backToMain">Back</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="successful_login">You have logged in successfully!</string>
    <string name="login_fail">Incorrect input</string>
    <string name="registration_failed">Unable to register</string>
    <string name="admin_hub_welcome">Successful admin login</string>
    <string name="title_activity_main_hub">MainHub</string>
    <string name="title_activity_login_fail">LoginFail</string>
    <string name="title_activity_registration_feed">RegistrationFeed</string>
    <string name="title_activity_registration_fail">RegistrationFail</string>
    <string name="title_activity_admin_hub">AdminHub</string>
    <string name="account_name">Account name</string>
    <string name="account_balance">Account Balance</string>
    <string name="addAccount">Add account</string>
    <string name="account_number">Account Number</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="title_activity_list_view_test">ListViewTest</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="title_activity_perform_transaction">PerformTransaction</string>

</resources>
