<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/transaction_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_text"
            android:textColor="#372c24" />
    
    	<EditText
            android:id="@+id/transactionAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="10dip"
            android:inputType="text"
            android:singleLine="true" />


    </LinearLayout>


     	<Button
              android:id="@+id/deposit"
              android:layout_width="120dp"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:layout_centerVertical="true"
              android:gravity="center"
              android:background="@drawable/bg"
              android:text="@string/deposit"
              android:textSize="20sp" />

          <Button android:id="@+id/withdraw"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
              	android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:text="@string/withdraw"
                android:gravity="center"
          	    android:background="@drawable/bg"
                android:textSize="20sp"/>
 

</RelativeLayout>